we shouldn't g_array_free NULL pointers

https://bugzilla.gnome.org/show_bug.cgi?id=622425